--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
-
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
