--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form class="search-form" id="search-form">
-      <input class="search-input" type="text" name="searchQuery" autocomplete="off" placeholder="Что ищем?" />
+      <input class="search-input" type="text" name="searchQuery" autocomplete="off" placeholder="Чого бажаешь?" />
       <button type="submit" class="search-submit">Пошук</button>
     </form>
     <div class="gallery">
